# chimera_evolve

./: Cargo.toml  README.md
examples/results/: gfp_bacillus.fasta  gfp_combined.fasta  gfp_escherichia.fasta
src/: cli.yml  ealgorithm.rs  main.rs  preprocessing.rs  translation_tables.rs
